name: twitter-viewer
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2016 Author name here
maintainer: example@example.com
homepage: https://github.com/githubuser/twitter-viewer#readme
synopsis: Initial project template from stack
description:
    Please see README.md
category: Web
author: Author name here

source-repository head
    type: git
    location: https://github.com/githubuser/twitter-viewer

library
    exposed-modules:
        Lib
    build-depends:
        base >=4.7 && <5,
        text -any,
        aeson,
        wreq,
        lens,
        bytestring,
        base64-bytestring,
        string-class,
        lens-aeson,
        utf8-string,
        time,
        configurator
    default-language: Haskell2010
    hs-source-dirs: src

executable twitter-viewer-exe
    main-is: Main.hs
    build-depends:
        base -any,
        twitter-viewer -any
    default-language: Haskell2010
    hs-source-dirs: app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite twitter-viewer-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base -any,
        twitter-viewer -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
